<resources>
    <string name="app_name">MasuKerja</string>
    <string name="masukerja">MasuKerja</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="or">OR</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="statistic">Statistic</string>
    <string name="article">Article</string>
    <string name="test">Test</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="generate">Generate</string>
    <string name="forget_password">Lupa Password?</string>
    <string name="no_account">Belum Punya Akun ?</string>
    <string name="input_email">Masukkan Email Anda</string>
    <string name="send">Kirim</string>
    <string name="back">Kembali</string>
    <string name="kode_otp">Kode OTP</string>
    <string name="check_otp">Cek Email Anda Untuk Melihat Kode OTP</string>
    <string name="new_password">Password Baru</string>
    <string name="input_new_password">Masukkan Password Baru Anda</string>
    <string name="save">Simpan</string>
    <string name="send_email">Kirim Ulang Email ?</string>
    <string name="_00_30">00:30</string>
    <string name="have_account">Sudah Punya Akun?</string>
    <string name="development">This application is still under development</string>
    <string name="sorry">We\'re sorry.</string>
    <string name="oops">Oops..</string>
    <string name="hello">Hello</string>
    <string name="cari_pekeraan">Cari Pekeraan</string>
    <string name="artikel_hari_ini">Artikel Hari Ini</string>
    <string name="job_saved">Pekerjaan Yang Disimpan</string>
    <string name="user_image">User Image</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="copyright">\u00a9 Copyright by MasuKerja Team | PENS</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="language">Language</string>
    <string name="search_source">Search Source</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="version">Version 1.0</string>
    <string name="masukerja_email">masukerja@gmail.com</string>
    <string name="close_dialog">Close Dialog</string>
    <string name="personality_test">Tes Kepribadian</string>
    <string name="test_description">Tes ini berujuan untuk mengetahui kerpribadian anda, supaya kami dapat merekomendasikan pekerjaan yang sesuai dengan anda</string>
    <string name="start">Start</string>
    <string name="test_guide">Beberapa hal yang perlu diperhatikan untuk menyelesaikan tes ini :</string>
    <string name="test_guide_1">Tidak ada jawaban yang benar untuk setiap pertanyaan.</string>
    <string name="test_guide_2">Jawablah pertanyaan tersebut dengan cepat, tidak perlu terlalu menganalisisnya. Beberapa mungkin membingungkan, namun pilihlah yang dirasa paling cocok untuk diri Anda.</string>
    <string name="test_guide_3">Jawablah pertanyaan tersebut apa adanya, sebagaimana diri Anda sebenarnya, bukan untuk menjadi sosok yang Anda inginkan terlihat oleh orang lain.</string>
    <string name="history">Riwayat</string>
    <string name="job_location">Job Location</string>
    <string name="job_field">Job Field</string>
    <string name="salary">Salary</string>
    <string name="search">Search</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="question">Question</string>
    <string name="location">Location</string>
    <string name="company_name">Company Name</string>
    <string name="job_name">Job Name</string>
    <string name="job_souce">Job Souce</string>
    <string name="posting_date">Posting Date</string>
    <string name="closing_date">Closing Date</string>
    <string name="view_more">Lihat Selengkapnya...</string>
</resources>
