<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.rpl.masukerja.view.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_statistic"
        android:name="com.rpl.masukerja.view.StatisticFragment"
        android:label="@string/statistic"
        tools:layout="@layout/fragment_statistic" />
    <fragment
        android:id="@+id/navigation_article"
        android:name="com.rpl.masukerja.view.ArticleFragment"
        android:label="@string/article"
        tools:layout="@layout/fragment_article" />
    <fragment
        android:id="@+id/navigation_test"
        android:name="com.rpl.masukerja.view.TestFragment"
        android:label="@string/test"
        tools:layout="@layout/fragment_test" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.rpl.masukerja.view.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>